C2LC-173: Set max-height property to AddNodeToggleSwitch to prevent stretching behaviour

--- a/src/AddNodeToggleSwitch.scss
+++ b/src/AddNodeToggleSwitch.scss
@@ -5,6 +5,7 @@
     margin-top: 1rem;
     margin-right: 0.5rem;
     width: 3.6rem;
+    max-height: 2rem;
     background: #c4c4c4;
     border-radius: 1rem;
     padding: 0.2rem;
